10.0.0: retire named recording Collections
